add improvement of Rotationmatrix

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -88,7 +88,7 @@ blabla\par
 	Während der Umsetzung des Projekts kommen folgende Software-Komponente eingesetzt:
 	%
 	\begin{itemize}
-		\item MATLAB 2012b
+		\item \gls{g:matlab} 2012b
 		\item LabView 2013
 		\item NI-DAQ mx 9.5.5 
 	\end{itemize}
