add some additions to LabVIEW mit myRIO

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -137,3 +137,32 @@
   year = {2014},
   keywords = {lit},
 }
+
+@inbook{img:linalg2,
+  title = {},
+  booktitle = {Lineare Algebra und Geometrie 2},
+  publisher = {Berner Fachhochschule Fachbereich MNG},
+  year = {2011},
+  author = {Dr. Werner Jenni},
+  pages = {10},
+  keywords = {pic},
+}
+
+@MISC{img:myrio_labview,
+  url = {http://www.ni.com/cms/images/devzone/tut/ndixwasv6568645617503173593_20130627101725.png},
+  urldate = {2014-06-045},
+  author = {National Instruments},
+  title = {NI myRIO und LabVIEW},
+  year = {2014},
+  keywords = {pic},
+}
+
+@ONLINE{lit:ni_max,
+  url = {http://digital.ni.com/public.nsf/allkb/71544521BDE34FFB86256FCF005F4FB6},
+  title = {NI MAX},
+  publisher = {National Instruments},
+  urldate = {2014-06-05},
+  year = {2014},
+  keywords = {lit},
+}
+
