--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -47,7 +47,7 @@ blabla\par
 	%
 	\image{content/1_einleitung/image/ablauf}{scale=1}{htbp}[Projekablauf][img:projekablauf]
 %	
-\subsubsection{Arbeitsphasen}\label{sss:arbeitsphasen}
+\subsubsection*{Arbeitsphasen}\label{sss:arbeitsphasen}
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implementierung und Validierung
 	%
 	\paragraph*{Literaturstudie}
@@ -63,14 +63,14 @@ blabla\par
 		Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
 %
 %
-\subsubsection{Zeitplan}
+\subsubsection*{Zeitplan}
 	Aus den definierten \gls{ac:ap} wird ein entsprechender Zeitplan erstellt. Dabei wird der chronologische Ablauf des Ablaufplans eingehalten. Wie der Abbildung \vref{img:zeitplan} zu entnehmen ist, werden keine Bufferzeiten eingeplant. Dies weil die Projektdauer bezogen auf die Aufgabenstellung schon knapp ausfällt und daher jede Verzögerung den Erfolg des Projekts gefährden würde.
 	%
 	\image{content/1_einleitung/image/Zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan]
 %
 %
-\subsubsection{Meilensteine}
-	Jede Phase\footnote{siehe Abschnitt \vref{sss:arbeitsphasen}} wird durch einen Meilenstein abgeschlossen. Die Erfüllung einen Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
+\subsubsection*{Meilensteine}
+	Jede Phase\footnote{siehe \vpageref{sss:arbeitsphasen} Arbeitsphasen} wird durch einen Meilenstein abgeschlossen. Die Erfüllung einen Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
 	\begin{description}
 		\item[wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
 		%
