--- a/glossary.tex
+++ b/glossary.tex
@@ -28,11 +28,13 @@
 % Transversalebene
 \newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des Mesnchlichen Körpers. \cite{lit:transversal}}}
 %
-% LabVIWE
+% LabVIEW
 \newglossaryentry{g:labview}{name=LabVIEW, description={System Design Software von der Firma \acrfull{ac:ni}}}
 %
 % myRIO
 \newglossaryentry{g:myrio}{name=NI myRIO, description={Developmentboard der Firma \acrfull{ac:ni} entwickelt für den günstigen Einstieg in \gls{g:labview}}}
+\newglossaryentry{g:ssh}{name=SSH, description={Steht für Secure Shell und stellt eine gängige Möglichkeit dar eine sicher Verbindung zu einem UNIX-System herzustellen}}
+\newglossaryentry{g:webdav}{name=WebDAV, description={Steht für Web-based Distributed Authoring and Versioning und stellt ein offener Standard für den Datentransfer im Internet dar}}
 %
 % MATLAB
 \newglossaryentry{g:matlab}{name=MATLAB, description={Software von \href{http://www.mathworks.ch/}{The MathWorks} speziel ausgelegt zum Lösen mathematischer Problemstellungen}}
