add some sections to concept chapter

--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -13,21 +13,57 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Konzept}\label{ch:konzept}
-\section{Datenaufnahme mit \acrshort{ac:icp}-Beschleunigungssensoren}
+%
+%
+%Datenaufnahme mit ICP-Beschleunigungssensoren
+\section{Datenaufnahme mit ICP-Beschleunigungssensoren}
 Um bei der Konzeptentwicklung Daten zum Überprüfen des Algorithmus zu haben, haben wir von Rolf Vetter \gls{ac:icp}-Beschleunigungssensoren von IMI Sensors erhalten. Mit einer \gls{ac:daq}-Karte von \gls{ac:ni}, der \gls{ac:ni} USB-4431, wurden die Beschleunigungssensoren direkt mittels MATLAB ausgelesen. Somit sind die Daten direkt in MATLAB zur Weiterverarbeitung abgelegt. Es hat sich jedoch schnell herausgestellt, dass die Sensoren für unsere Anwendung nicht geeignet sind. Der Frequenzbereich des Sensors ist im Datenblatt in \vref{ch:indusriesensor} ersichtlich. Dort zu sehen, dass der Sensor einen Frequenzbereich von 0.5 Hz bis 10 kHz hat. Somit wird die für uns notwendige Gravitationsbeschleunigung, die einem DC-Anteil im Signal entspricht, nicht aufgenommen. Diese Sensoren können somit nur für dynamische Anwendungen verwendet werden.
-\section{Algorithmus}
-\subsection{Übersicht}
-\subsection{Filterung}
-\subsection{Winkeldetektion}
-\subsection{Rotation}
-\subsection{Integration}
-\section{Software}
-\section{Experimental-Protokoll }
-\subsection{Mechanik}
-\subsection{Messhardware}
-\subsection{Software}
-\subsection{Messfehler}
-\subsection{Ablauf}
-\todo{verschiedene Messung beschieben für Reprodutzierbarkeit}
+%
+%
+%Algorithmus
+\section{Algorithmus}\label{s:konzept_algo}
+	%
+	\subsection{Übersicht}
+	%
+	\subsection{Filterung}
+	%
+	\subsection{Winkeldetektion}
+	%
+	\subsection{Rotation}
+	%
+	\subsection{Integration}
+%
+%
+%Software
+\section{Software}\label{s:konzept:sw}
+	%
+	\subsection{Rohdaten aufzeichnen}
+	%
+	\subsection{myRIO Posture Estimation}
+%
+%
+%Experimental-Protokoll
+\section{Experimental-Protokoll}\label{s:experimental_protokoll}
+	%
+	%
+	\subsection{Grund/Zweck der Messung}
+	%
+	%
+	\subsection{Material/Testumgebung}
+	%
+	%
+	\subsection{Methoden}
+		\subsubsection*{Messgruppen}\todo{unabhängige Variabel}
+		\subsubsection*{Testbeschreibungen}\todo{Ablauf}
+		\subsubsection*{Datenauswertung}\todo{abhängige Variabel}
+	%
+	%
+	\subsection{Kontrollgruppe}
+	%
+	%
+	\subsection{Interpretation}\todo{Histogramm, Gruppenvergleich,Messfehler}
+%
+%
+%Validierung
 \section{Validierung}
-\todo{Auswertung Experimental-Protokoll}
+\todo{Auswertung Konzept}
