--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -74,19 +74,12 @@
 					\item Passwort: \textit{leer}
 				\end{itemize}
 				Daufhin präsentiert sich ein einfacher Dateiexplorer, wie Abbildung \vref{img:myrio_webdav} zeigt.
-				\image{content/2_grundlagen/image/webdav_myrio}{scale=0.5}{htbp}[Dateiexplorer][img:myrio_webdav]
+				%\image{content/2_grundlagen/image/webdav_myrio}{scale=0.5}{htbp}[Dateiexplorer][img:myrio_webdav]
 				%
 				\item[\gls{g:labview}]\todo{data-stream erklären}
 				%
 				\item[\gls{g:ssh}] Ein \gls{g:ssh}-Server bietet \textsf{SFTP} für die sichere Übertragung von Daten. Dazu müssen die zuvor unter \textsf{\gls{g:ssh}} erwähnten Bedingungen erfüllt sein.
 			\end{description}
-%
-%
-%DAQ in MATLAB
-\section{DAQ in MATLAB}
-	\gls{g:matlab} bietet zum direkten Auslesen von Daten eine Data Acquisition Toolbox an. In dieser können angeschlossene \acrshort{ac:daq}-Karten in einer sogenannten Session direkt in \gls{g:matlab} Beispielsweise mittels USB ausgelesen werden. Auch können Daten/Signale, welche in \gls{g:matlab} generiert wurden über Ausgänge der Karte ausgegeben werden.\par 
-	%
-	Zum Auslesen eines Beschleunigungssensors wurde ein kurzes \gls{g:matlab}-Skript geschrieben (ersichtlich in \vref{ch:daqauslesen}). Dieses Skript sollte auch zukünftigen Arbeiten eine schnelle und einfache Verwendung der Beschleunigungssensoren ermöglichen.
 %
 %
 %Rotationsmatrix
