--- a/report.tex
+++ b/report.tex
@@ -322,7 +322,7 @@
 \input{appendix/versionierung/versionierung}
 %
 %Anhang B
-\input{appendix/MATLAB/MATLAB}
+\input{appendix/DAQ_MATLAB/DAQ_MATLAB}
 %
 %Anhang C
 %\input{appendix/datasheet/datasheet}
