--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -51,13 +51,13 @@ blabla\par
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implementierung und Validierung
 	%
 	\paragraph*{Literaturstudie}
-		Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung LabView} und \textsf{Einarbeitung DAQ in MATLAB}). Durch dies werden vorhandenen Problemen früh erkannt und beeinflussen die späteren Phasen nicht negativ.
+		Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Durch dies werden vorhandenen Problemen früh erkannt und beeinflussen die späteren Phasen nicht negativ.
 	%
 	\paragraph*{Konzept}
-		Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessen zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein LabView-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt LabView ergänzen}).
+		Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessen zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
 	%
 	\paragraph*{Implementierung} 
-		In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung MATLAB nach LabView} der erstellte MATLAB Algorithmus nach LabView portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt eine Kreuzvalidierung mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Implementation}). Parallel dazu wird das bestehende LabView-Projekt zu einem Demodulator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demodulator}).   
+		In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab} Algorithmus nach \gls{g:labview} portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt eine Kreuzvalidierung mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Implementation}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demodulator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demodulator}).   
 	%
 	\paragraph*{Validierung}
 		Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
@@ -76,7 +76,7 @@ blabla\par
 		%
 		\item[Machbarkeit gewährleistet] Am Ende der Konzeptphase muss ein Algorithmus vorliegen, der die Machbarkeit des Projekts gewährleistet. Abgeschlossen ist die am \textbf{11.06.2014}.
 		%
-		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist fertige Umsetzung des Konzept in LabView. Dies soll bis am \textbf{19.06.2014} erfolgen.
+		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist fertige Umsetzung des Konzept in \gls{g:labview}. Dies soll bis am \textbf{19.06.2014} erfolgen.
 		%
 		\item[Zusammenfassung] Abschliessend wir das gesamte Projekt einer Validierung unterzogen. Diese Phase ist am \textbf{26.06.2014} abgeschlossen.
 		%
@@ -89,7 +89,7 @@ blabla\par
 	%
 	\begin{itemize}
 		\item \gls{g:matlab} 2012b
-		\item LabView 2013
+		\item \gls{g:labview} 2013
 		\item NI-DAQ mx 9.5.5 
 	\end{itemize}
 	%
